Lagt til og kjørt ktlint (#12)